motoko backend <--> js frontend

--- a/src/dbank_assets/src/index.html
+++ b/src/dbank_assets/src/index.html
@@ -11,7 +11,7 @@
 
   <body>
     <div class="container">
-      <img src="dbank_logo.png" alt="DBank lclearogo" width="100"/>
+      <img src="dbank_logo.png" alt="DBank logo" width="100"/>
       <h1>Current Balance: $<span id="value">234</span></h1>
       <div class="divider"></div>
       <form action="#">
